--- a/AbstractFactoryPattern/src/div.html
+++ b/AbstractFactoryPattern/src/div.html
@@ -1,30 +1,21 @@
 <!DOCTYPE html>
-<html><head><title>Blog and News</title></head>
-<body>
+<html><head><title>Blog and News</title><style>
+div.TRAY { padding:0.5em; margin-left:5em; border: 1px solid black; }
+div.LINK { padding:0.5em; background-color: lightgray; }
+</style></head><body>
 <h1>Blog and News</h1>
-<ul>
-<li>
-Blog Site
-<ul>
- <li><a href="https://example.com/blog1">Blog 1</a></li>
- <li><a href="https://example.com/blog2">Blog 1</a></li>
- <li><a href="https://example.com/blog3">Blog 1</a></li>
-</ul>
-</li>
-<li>
-News Site
-<ul>
- <li><a href="https://example.com/news1">News 1</a></li>
- <li><a href="https://example.com/news2">News 2</a></li>
-<li>
-News 3
-<ul>
- <li><a href="https://example.com/news3us">News 3 (US)</a></li>
- <li><a href="https://example.com/news3kr">News 3 (Korea)</a></li>
-</ul>
-</li>
-</ul>
-</li>
-</ul>
+<p><b>Blog Site</b></p>
+<div class="TRAY"><div class="LINK"><a href="https://example.com/blog1">Blog 1</a></div>
+<div class="LINK"><a href="https://example.com/blog2">Blog 1</a></div>
+<div class="LINK"><a href="https://example.com/blog3">Blog 1</a></div>
+</div>
+<p><b>News Site</b></p>
+<div class="TRAY"><div class="LINK"><a href="https://example.com/news1">News 1</a></div>
+<div class="LINK"><a href="https://example.com/news2">News 2</a></div>
+<p><b>News 3</b></p>
+<div class="TRAY"><div class="LINK"><a href="https://example.com/news3us">News 3 (US)</a></div>
+<div class="LINK"><a href="https://example.com/news3kr">News 3 (Korea)</a></div>
+</div>
+</div>
 <hr><address>Youngjin.com</address>
 </body></html>
